refactor: rename package to io.github.rszabo50