@@ -1,9 +1,11 @@
-package ca.bobszabo.messagebridge;
+package io.github.rszabo50.messagebridge;
 
 import org.junit.jupiter.api.Test;
 
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -17,13 +19,13 @@ class BroadcastMessageSenderTest {
     void sendsSameMessageToEveryDestination() {
         CapturingSender first = new CapturingSender(new SendResult(204, ""));
         CapturingSender second = new CapturingSender(new SendResult(200, "ok"));
-        BroadcastMessageSender sender = MessageBridge.broadcast(List.of(first, second));
+        BroadcastMessageSender sender = MessageBridge.broadcast(Arrays.asList(first, second));
 
         BroadcastSendResult result = sender.send(OutboundMessage.text("Switching vendors"));
 
         assertTrue(result.success());
-        assertEquals("Switching vendors", first.messages.getFirst().text());
-        assertEquals("Switching vendors", second.messages.getFirst().text());
+        assertEquals("Switching vendors", first.messages.get(0).text());
+        assertEquals("Switching vendors", second.messages.get(0).text());
         assertEquals(2, result.outcomes().size());
     }
 
@@ -31,19 +33,19 @@ class BroadcastMessageSenderTest {
     void attemptsRemainingDestinationsAfterFailure() {
         FailingSender first = new FailingSender(new IOException("old vendor unavailable"));
         CapturingSender second = new CapturingSender(new SendResult(204, ""));
-        BroadcastMessageSender sender = MessageBridge.broadcast(List.of(first, second));
+        BroadcastMessageSender sender = MessageBridge.broadcast(Arrays.asList(first, second));
 
         BroadcastSendResult result = sender.send(OutboundMessage.text("Switching vendors"));
 
         assertFalse(result.success());
         assertEquals(1, second.messages.size());
-        assertInstanceOf(IOException.class, result.outcomes().getFirst().failure());
+        assertInstanceOf(IOException.class, result.outcomes().get(0).failure());
         assertTrue(result.outcomes().get(1).success());
     }
 
     @Test
     void rejectsEmptyDestinations() {
-        assertThrows(IllegalArgumentException.class, () -> MessageBridge.broadcast(List.of()));
+        assertThrows(IllegalArgumentException.class, () -> MessageBridge.broadcast(Collections.emptyList()));
     }
 
     private static final class CapturingSender implements MessageSender {
